syntax = "proto3";

package com.jobportal.articleserviceproto;

// Articles

service ArticleService {
  rpc getAllArticles(GetAllArticlesRequest) returns (GetAllArticlesResponse) {}
  rpc getArticleById(GetArticleByIdRequest) returns (GetArticleByIdResponse) {}
  rpc saveArticle(SaveArticleRequest) returns (SaveArticleResponse) {}
  rpc updateArticle(UpdateArticleRequest) returns (UpdateArticleResponse) {}
  rpc deleteArticle(DeleteArticleRequest) returns (DeleteArticleResponse) {}
}

message Article {
  int64 id = 1;
  string title = 2;
  string body = 3;
  string author = 4;
  string company = 5;
  int32 upvotes = 6;
  repeated Comment comments = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message GetAllArticlesRequest {

}

message GetAllArticlesResponse {
  repeated Article articles = 1;
}

message GetArticleByIdRequest {
  int64 articleId = 1;
}

message GetArticleByIdResponse {
  Article article = 1;
}

message SaveArticleRequest {
  Article article = 1;
}

message SaveArticleResponse {
  string message = 1;
}

message UpdateArticleRequest {
  Article article = 1;
}

message UpdateArticleResponse {
  string message = 1;
}

message DeleteArticleRequest {
  int64 articleId = 1;
}

message DeleteArticleResponse {
  string message = 1;
}


// Comments

service CommentService {
  rpc getAllComments(GetAllCommentsRequest) returns (GetAllCommentsResponse) {}
  rpc getCommentById(GetCommentByIdRequest) returns (GetCommentByIdResponse) {}
  rpc saveComment(SaveCommentRequest) returns (SaveCommentResponse) {}
  rpc updateComment(UpdateCommentRequest) returns (UpdateCommentResponse) {}
  rpc deleteComment(DeleteCommentRequest) returns (DeleteCommentResponse) {}
  rpc getAllCommentsByPostId(GetAllCommentsByArticleIdRequest) returns (GetAllCommentsByArticleIdResponse) {}
}

message Comment {
  int64 id = 1;
  string author = 2;
  string body = 3;
  int32 upvotes = 4;
  int32 downvotes = 5;
  repeated int64 replies = 6;
  int64 articleId = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message GetAllCommentsRequest {

}

message GetAllCommentsResponse {
  repeated Comment comments = 1;
}

message GetCommentByIdRequest {
  int64 commentId = 1;
}

message GetCommentByIdResponse {
  Comment comment = 1;
}

message SaveCommentRequest {
  Comment comment = 1;
}

message SaveCommentResponse {
  string message = 1;
}

message UpdateCommentRequest {
  Comment comment = 1;
}

message UpdateCommentResponse {
  string message = 1;
}

message DeleteCommentRequest {
  int64 commentId = 1;
}

message DeleteCommentResponse {
  string message = 1;
}

message GetAllCommentsByArticleIdRequest {
  int64 articleId = 1;
}

message GetAllCommentsByArticleIdResponse {
  repeated Comment comments = 1;
}